# Digit

./: pubspec.yaml
.github/workflows/: build.yml
android/app/src/main/cpp/: CMakeLists.txt  sequencer_native.cpp
lib/: engine.dart  main.dart  native_backend.dart
